About: A p5.js tropical cyclone simulation game

v20190129a:
    + Added "Save* and Return to Main Menu" button in the in-sim menu
    + Added "Back" button in basin creation menu
v20190128a:
    + Added WIP menu in-sim for accessing various settings and features in upcoming updates
    * Saving/loading now checks save format number for compatibility
v20190101a:
    * Saving/loading test now autosaves partial basin data such as hemisphere and start year
v20181231a:
    * Optimized data compression functions
    * A few other preparations for adding saving/loading
v20181225a:
    + Added a couple functions for data compression purposes for saving/loading
v20181222a:
    + Added a basic test for basin saving/loading
        > Saves just the seed of the latest basin generated
        > The "'Load' From Seed (test)" button uses the saved seed to generate a new basin (does nothing if no seed is saved)
v20181218a:
    + Added a basin setting for the starting year of a simulation
        > The default of "Current year" is the current Jan-Dec year for NHem and Jul-Jun year for SHem
v20181217a:
    + Added damage and deaths, including counters in storm and season stats
        > The damage/deaths algorithm is rudimentary and may need change
v20181216a:
    + Added "Total ACE" counter to season stats
v20181215a:
    + Added "Jump to" button to side panel, which (while paused) "jumps" analysis to a specific point
        > In season stats, jumps to the beginning of the targeted year
        > In storm stats, jumps to when the targeted system first formed as a disturbance
v20181207a:
    + Added counter for category 5s in season stats
v20181203c:
    + Added arrow buttons to side panel for navigating through season stats
        > Greyed out when viewing storm stats or if there is no season to navigate to
v20181203b:
    + Added viewing season stats in storm info side panel
        > Click drop arrow button without storm selected to access